# nautilus

./: .dockerignore  .gitignore  ASYNC_IO_PLAN.md  CLAUDE.md  CLUSTER_DASHBOARD_PLAN.md  CODE_REVIEW.md  DESIGN.md  Dockerfile  IMPLEMENTATION_PLAN.md  PERFORMANCE_CHANGELOG.md  README.md  STAGE4_PLAN.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.claude/skills/perf-loop/: SKILL.md
.claude/skills/writing-docs/: SKILL.md
.github/workflows/: _smoke-selfhosted.yml  bench-baseline.yml  bench-check.yml  bench-pinned.yml  bench-rebaseline.yml  ci.yml  compose.yml  docs.yml  runner-smoke.yml
benchmarks/: baseline.json
benchmarks/baselines/: README.md  amd-epyc-7763-64-core-processor.json  amd-epyc-9v74-80-core-processor.json  intel-xeon-platinum-8573c.json
benchmarks/geospatial/: README.md  _harness.py  _ops.py  bench_workers.py  bench_workers_cpu.py  bench_workers_zarr.py  e2e_case.py  run_bench.py  run_e2e.py
conformance/: vectors.json
deploy/kubernetes/: README.md  bench.py  coordinator-job.yaml
deploy/kubernetes/base/: kustomization.yaml  namespace.yaml  workers-service.yaml  workers-statefulset.yaml
deploy/kubernetes/overlays/cross-node/: affinity.yaml  kustomization.yaml
deploy/kubernetes/overlays/intra-node/: affinity.yaml  kustomization.yaml
docs/: api.md  cli-reference.md  dashboard.md  deployment.md  design.md  dsl-reference.md  examples.md  getting-started.md  glossary.md  index.md  performance.md  telemetry-reference.md
docs/stylesheets/: extra.css
examples/: compiled_wordcount.py  geospatial.py  imagery.py  key_groups.py  multiprocess.py  parallel_word_count.py  sentinel2_ndvi.py  two_worker.py  wordcount.py
infra/bench-runner/: .gitignore  README.md  iam.tf  instance.tf  network.tf  outputs.tf  providers.tf  terraform.tfvars.example  userdata.sh.tftpl  variables.tf
overrides/partials/: header.html  tabs.html
src/nautilus/: __init__.py  __main__.py  _version.py  bench.py  benchmarks.py  cli.py  demos.py  dsl.py  operators.py  pipelines.py  tensors.py
src/nautilus/api/: __init__.py  graph.py
src/nautilus/cluster/: __init__.py  cohort.py  control_link.py  coordinator.py  daemon.py  dashboard.py  launcher.py  membership.py  placement.py  protocol.py  rendezvous.py  worker_main.py
src/nautilus/compile/: __init__.py  lower.py  plan.py
src/nautilus/core/: __init__.py  operator.py  records.py  time.py
src/nautilus/driver/: __init__.py  local.py  meta.py  parallel.py  pipeline.py  result.py  run.py
src/nautilus/runtime/: __init__.py  actor.py  channel.py  connector.py  execute.py  local.py  mailbox.py  meta.py  parallel.py  partition.py  result.py  run.py
src/nautilus/security/: __init__.py  handshake.py  secret.py  tls.py
src/nautilus/state/: __init__.py
src/nautilus/telemetry/: __init__.py  catalog.py  dashboard.html  live.py  model.py  recorder.py  registry.py  system.py
src/nautilus/telemetry/report/: __init__.py  reference.py  report.py  serialize.py  sink.py
src/nautilus/testing/: __init__.py
src/nautilus/transport/: __init__.py  connector.py  framing.py  handshake.py  listener.py  mesh.py  process.py  socket_channel.py
src/nautilus/windows/: __init__.py
tests/: test_advertise.py  test_agg_by.py  test_api_graph.py  test_async_executor_port.py  test_async_sink.py  test_async_source_and_demo.py  test_async_transform.py  test_bench.py  test_benchmarks.py  test_cli.py  test_cli_port.py  test_cluster_cohort.py  test_cluster_dashboard.py  test_cluster_deploy.py  test_cluster_heartbeat.py  test_cluster_placement.py  test_cluster_remote.py  test_cluster_rendezvous.py  test_cluster_scale.py  test_compile_execute.py  test_compile_plan.py  test_conformance_vectors.py  test_control_link.py  test_core_port.py  test_dashboard.py  test_dsl.py  test_dsl_port.py  test_examples_geospatial.py  test_examples_sentinel2.py  test_ir_compile_port.py  test_join.py  test_live_endpoint.py  test_mailbox.py  test_parallel_dataflow.py  test_parallel_telemetry.py  test_parallel_transport.py  test_partition.py  test_records.py  test_regressions.py  test_review_fixes.py  (+25 more)
tests/integration/: test_compose.py
tests/port/: __init__.py  test_bench.py  test_cli.py  test_cluster.py  test_conformance_vectors.py  test_operators.py  test_partition.py  test_prop_dsl_ir.py  test_prop_operators.py  test_prop_partition.py  test_prop_security.py  test_prop_state.py  test_prop_structural_digest.py  test_prop_tensors.py  test_prop_transport_framing.py  test_runtime_termination.py  test_state.py  test_tensors.py
